populated_content_css_changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <header>
-    <div class="pawtel-logo">PAWTEL</div>
+    <div class="pawtel-logo">
+      <img src="./img/logo.png" alt="logo" width="30%" />
+    </div>
     <nav>
-      <a href="#about">About Us</a>
-      <a href="#services">Our Services</a>
+      <a href="#why-us">Why choose us?</a>
+      <a href="#offer">Our Services</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -19,38 +21,61 @@
       <div class="catch">
         <div><p>#1 Editors choice App of 2020</p></div>
         <div>
-          <h1>Some catchy Line</h1>
+          <h1>Where paws relax.</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Dignissimos reiciendis fugiat quisquam deserunt quo velit rem
-            obcaecati, ducimus debitis quod expedita, iure magnam! Possimus
-            accusamus vel atque delectus nostrum debitis.
+            At Pawtel, we believe every pet deserves more than just a place to
+            stay—they deserve a vacation of their own. From cozy suites to
+            endless playtime and plenty of cuddles, we make sure tails keep
+            wagging and paws feel right at home. Whether it’s a weekend getaway
+            or an extended stay, Pawtel is your pet’s favorite retreat.
           </p>
         </div>
-        <div><button>Try for Free</button></div>
+        <div><button>Video</button></div>
       </div>
-      <div class="demo">
+      <div class="demo" id="contact">
         <div><img src="" alt="Demo Screenshot" /></div>
         <div>
-          <h2>Definitely a Demo</h2>
-          <p>WBS Coding School</p>
+          <h2>Book Their Pawfect Getaway</h2>
+          <p>
+            Give your furry friend a stay as special as they are. At Pawtel,
+            comfort, care, and tail wags come standard.
+          </p>
         </div>
-        <div><button>Continue</button></div>
+        <div><button>Let’s Pawty</button></div>
       </div>
     </section>
     <section class="trustcomp">
       <div><p>Trusted by companies like</p></div>
       <div class="trustcomp_logo">
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
+        <img
+          src="https://www.sachsenallee.de/fileadmin/user_upload/GLOBAL/brand_stores/logos/fressnapf.jpg"
+          alt="Fressnapf"
+        />
+        <img
+          src="https://lh3.googleusercontent.com/wUOtm1if57p9Udbhr6TTLGqqYFkfbAajvfXLhDrT2P7MX5o1z_3VMXyGAjBiIfQnNrk=s180"
+          alt="Dogo"
+        />
+        <img
+          src="https://play-lh.googleusercontent.com/zcYLnrxPQwNi5bciTKZzeY_DUBgw3fLzJd7D2mtg5pr88acY1Br2oj_ZGcnMByzWLgI"
+          alt="Balu"
+        />
+        <img
+          src="https://consumersiteimages.trustpilot.net/business-units/5f9414323c75d600013daa06-198x149-1x.jpg"
+          alt="Check For Pet"
+        />
+        <img
+          src="https://www.f6s.com/content-resource/profiles/3329362_th1.jpg"
+          alt="Dr. Sam"
+        />
       </div>
     </section>
-    <section class="video">
+    <section class="video" id="video">
       <div><h1>Check out our Video:</h1></div>
-      <div><video src=""></video></div>
+      <div>
+        <video width="320" height="240" controls>
+          <source src="./video/dog.mp4" type="video/mp4" />
+        </video>
+      </div>
     </section>
     <section id="offer" class="section 5">
       <h2>What we offer</h2>
@@ -66,7 +91,12 @@
               <figcaption class="servise-title">
                 Daycare & Overnight boarding
               </figcaption>
-              <div class="circle">🦦</div>
+              <div class="circle">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1724834056013-76c09a1f80b2?q=80&w=996&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
           <li>
@@ -74,7 +104,12 @@
               <figcaption class="servise-title">
                 Transport & Quarantine support
               </figcaption>
-              <div class="circle">🚕</div>
+              <div class="circle">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1661425813953-5ebf4b53fa03?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
           <li>
@@ -82,7 +117,12 @@
               <figcaption class="servise-title">
                 Playtime & Socialization
               </figcaption>
-              <div class="circle">🏐</div>
+              <div class="circle">
+                <img
+                  src="https://images.unsplash.com/photo-1638720340715-d8097a58cdf1?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
           <li>
@@ -90,7 +130,12 @@
               <figcaption class="servise-title">
                 Medication Administration
               </figcaption>
-              <div class="circle">🚑</div>
+              <div class="circle">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1664298612087-e0d5cc1981ed?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
           <li>
@@ -98,13 +143,23 @@
               <figcaption class="servise-title">
                 Grooming & Basic care
               </figcaption>
-              <div class="circle">✄</div>
+              <div class="circle">
+                <img
+                  src="https://images.unsplash.com/photo-1611173622933-91942d394b04?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
           <li>
             <figure class="service-card">
               <figcaption class="servise-title">Training</figcaption>
-              <div class="circle">🏅</div>
+              <div class="circle">
+                <img
+                  src="https://plus.unsplash.com/premium_photo-1686523494944-ca32cb8ea852?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="Pawpic"
+                />
+              </div>
             </figure>
           </li>
         </ul>
@@ -115,9 +170,10 @@
       <ul class="why-list">
         <li class="why-card">
           <img
-            src="images/online-booking.jpg"
-            alt="Online booking"
             class="why-img"
+            src="https://images.unsplash.com/photo-1488509082528-cefbba5ad692?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Online booking"
+            alt="onlinebooking"
           />
           <div class="why-text">
             <h3>Online booking</h3>
@@ -130,9 +186,9 @@
 
         <li class="why-card">
           <img
-            src="images/flexible-feeding.jpg"
-            alt="Flexible feeding"
             class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1726761692986-6bcde87fc2b8?q=80&w=3201&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3Dg"
+            alt="Flexible feeding"
           />
           <div class="why-text">
             <h3>Flexible feeding</h3>
@@ -145,9 +201,9 @@
 
         <li class="why-card">
           <img
-            src="images/monitoring.jpg"
-            alt="24/7 monitoring"
             class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1666278379770-440439b08656?q=80&w=3088&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="24/7 monitoring"
           />
           <div class="why-text">
             <h3>24/7 monitoring</h3>
@@ -157,9 +213,9 @@
 
         <li class="why-card">
           <img
-            src="images/care-plans.jpg"
-            alt="Individual care plans"
             class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1663040477032-0cb4ee5402bc?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Individual care plans"
           />
           <div class="why-text">
             <h3>Individual care plans</h3>
@@ -172,9 +228,9 @@
 
         <li class="why-card">
           <img
-            src="images/pickup.jpg"
-            alt="Pick-up & Drop-off"
             class="why-img"
+            src="https://plus.unsplash.com/premium_photo-1664095841142-5e20a480df4f?q=80&w=1742&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Pick-up & Drop-off"
           />
           <div class="why-text">
             <h3>Pick-up & Drop-off</h3>
@@ -187,9 +243,9 @@
 
         <li class="why-card">
           <img
-            src="images/emergency.jpg"
-            alt="Emergency support"
             class="why-img"
+            src="https://images.unsplash.com/photo-1612574935301-af13ccce9258?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Emergency support"
           />
           <div class="why-text">
             <h3>Emergency support</h3>
@@ -205,7 +261,10 @@
       <h2>Special discounts for bundled services</h2>
       <div class="discounts-grid">
         <div class="discount-card">
-          <img src="images/discount1.jpg" alt="Bundle A" />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1671737775556-5d2b4dba7bac?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Bundle A"
+          />
           <div class="slab">
             <div class="price">$15</div>
             <div class="features">Trial: daycare + grooming</div>
@@ -213,7 +272,10 @@
         </div>
 
         <div class="discount-card">
-          <img src="images/discount2.jpg" alt="Bundle B" />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1680196763896-581c800f6784?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Bundle B"
+          />
           <div class="slab">
             <div class="price">$49</div>
             <div class="features">Monthly: feeding + monitoring</div>
@@ -221,7 +283,10 @@
         </div>
 
         <div class="discount-card">
-          <img src="images/discount3.jpg" alt="Bundle C" />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1681181262647-7284f2f8908d?q=80&w=1734&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Bundle C"
+          />
           <div class="slab">
             <div class="price">$9</div>
             <div class="features">Hotel + vet + 24/7 support</div>
@@ -236,8 +301,8 @@
     <nav class="nav_foot">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Prices</a></li>
+        <li><a href="#offer">What we offer</a></li>
+        <li><a href="#discounts">Prices</a></li>
       </ul>
     </nav>
 
