--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <section class="headline">
       <div class="catch">
-        <div><p>#1 Editors choice App of 2020</p></div>
+        <div><p>#1 Pet Hotel in the World</p></div>
         <div>
           <h1>Where paws relax.</h1>
           <p>
@@ -33,7 +33,7 @@
         <div><button>Video</button></div>
       </div>
       <div class="demo" id="contact">
-        <div><img src="" alt="Demo Screenshot" /></div>
+        <div><img src="./img/getaway.png" alt="getaway" width="100%" /></div>
         <div>
           <h2>Book Their Pawfect Getaway</h2>
           <p>
@@ -288,7 +288,7 @@
             alt="Bundle C"
           />
           <div class="slab">
-            <div class="price">$9</div>
+            <div class="price">$149</div>
             <div class="features">Hotel + vet + 24/7 support</div>
           </div>
         </div>
@@ -296,7 +296,7 @@
     </section>
   </body>
   <footer>
-    <h2>Your product</h2>
+    <h2>Pawtel ©</h2>
 
     <nav class="nav_foot">
       <ul>
